<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/card_height"
    android:backgroundTint="?attr/colorPrimaryVariant"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/card_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/character_avatar"
            android:layout_width="@dimen/card_image_size"
            android:layout_height="@dimen/card_image_size"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/character_name"
            style="@style/CardCharacterTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_avatar"
            android:text="@string/character_name" />

        <TextView
            android:id="@+id/character_species"
            style="@style/CardCharacterTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_name"
            android:text="@string/character_species" />

        <TextView
            android:id="@+id/character_gender"
            style="@style/CardCharacterTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_species"
            android:text="@string/character_gender" />

        <TextView
            android:id="@+id/character_status"
            style="@style/CardCharacterTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/character_gender"
            android:text="@string/character_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>