<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/colorPrimaryVariant"
    app:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_margin="@dimen/card_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/episode_avatar"
            android:layout_width="@dimen/card_image_size"
            android:layout_height="@dimen/card_image_size"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/rick_and_morty_episode" />

        <TextView
            android:id="@+id/episode_name"
            style="@style/CardEpisodeTextStyle"
            app:layout_constraintStart_toEndOf="@id/episode_avatar"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/episode_name" />

        <TextView
            android:id="@+id/episode_se"
            style="@style/CardEpisodeTextStyle"
            app:layout_constraintStart_toEndOf="@id/episode_avatar"
            app:layout_constraintTop_toBottomOf="@id/episode_name"
            android:text="@string/episode" />

        <TextView
            android:id="@+id/episode_air_date"
            style="@style/CardEpisodeTextStyle"
            app:layout_constraintStart_toEndOf="@id/episode_avatar"
            app:layout_constraintTop_toBottomOf="@id/episode_se"
            android:text="@string/episode_air_date_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>